src/objects/Appointment__c.object
<CustomObject>
    <fields>
        <fullName>Appointment_Date__c</fullName>
        <label>Appointment Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Doctor</label>
        <referenceTo>Doctor__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration_in_minutes__c</fullName>
        <label>Duration in minutes</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Appointment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Appointment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>